fix wrapping input

--- a/src/style/material-overrides.scss
+++ b/src/style/material-overrides.scss
@@ -40,3 +40,7 @@
 .mui-dialog-window .mui-dialog-window-contents {
   width: 85%;
 }
+
+.mui-drop-down-icon .mui-menu .mui-menu-item {
+  white-space: nowrap;
+}
